fix: scrollbar (#707)
* feat: add operating system class on app element

* fix: only apply scrollbar to windows

--- a/src/renderer/styles/_general.css
+++ b/src/renderer/styles/_general.css
@@ -29,21 +29,21 @@ input:focus {
   @apply .outline-none
 }
 
-::-webkit-scrollbar {
+.App.windows *::-webkit-scrollbar {
   @apply .w-2 .h-2 .rounded-full;
   background-color: rgba(0, 0, 0, 0);
 }
-::-webkit-scrollbar-track:hover {
+.App.windows *::-webkit-scrollbar-track:hover {
   background-color: rgba(0, 0, 0, 0.05)
 }
-::-webkit-scrollbar-thumb {
+.App.windows *::-webkit-scrollbar-thumb {
   @apply .rounded-full;
   background-color: rgba(0, 0, 0, 0.3)
 }
-::-webkit-scrollbar-thumb:hover {
+.App.windows *::-webkit-scrollbar-thumb:hover {
   background-color: rgba(0, 0, 0, 0.4)
 }
-::-webkit-scrollbar-thumb:active {
+.App.windows *::-webkit-scrollbar-thumb:active {
   background-color: rgba(0, 0, 0, 0.5)
 }
 
